# Falling-Sand-Game

./: .gitignore  CMakeLists.txt  Readme.md
docs/: PLANS.md  README.md  architecture.md  cellular-automata.md  material-sand.md  material-water.md  materials.md  project-overview.md  roadmap.md  sand-water-interaction.md  simulation-model.md
src/: main.cpp  material_registry.cpp  material_registry.h  simulation.cpp  simulation.h  types.h
